# mike-os-x

./: .cursorrules  .dockerignore  .eslintrc.cjs  .gitignore  .prettierignore  .tool-versions  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml  mime.types  nginx.conf  package.json  railway.toml  reset-terminal.sh  tsconfig.json
.cursor/plans/: railway-deployment-guide.md  railway-infrastructure-setup.md  terminal-backend-architecture-be1ac767.plan.md
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml  deploy-blog.yml  deploy-infrastructure.yml  deploy-terminal.yml  release.yml  (+1 more)
apps/api/: .coverage  .dockerignore  .env.example  .env.sample  Dockerfile  README.md  docker-compose.terminal.yml  main.py  mypy.ini  pyproject.toml  pytest.ini  railway.toml  terminal.Dockerfile
apps/api/config/: settings.py
apps/api/content/: .gitkeep  README.md
apps/api/middleware/: auth.py  cors.py
apps/api/models/: responses.py
apps/api/services/: container_manager.py  message_protocol.py  pty_session_manager.py  rate_limiter.py  terminal_bridge.py
apps/api/tests/: conftest.py  test_api.py  test_integration.py  test_security.py  test_terminal_multiplexing.py
blog/: .dockerignore  .gitignore  CNAME  Dockerfile  Gemfile  README.md  _config.yml  index.md  nginx.conf  reading.md  resume.md  test-local.sh
docs/: OSX_Portfolio_Spec.md
iac/: Pulumi.dev.yaml  Pulumi.yaml  README.md  index.ts  package.json
scripts/: buildContentMetadata.mjs  generate-docker-tls.sh  generate-og-image.py  upload-certs-to-railway.sh
(+146 files in other folders)
