[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "docker>=7.1.0",
    "fastapi[standard]>=0.121.2",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.12.0",
    "redis>=7.0.1",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "mypy>=1.18.2",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.5",
]
